# DSO-Inertial-Stereo-ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml
calib/polytunnel/: IMU_info.txt  T_C0C1.txt  cam0.txt  cam1.txt  source_calibration.yaml
include/FullSystem/: CoarseTracker.cpp  FullSystem.cpp  FullSystemOptimize.cpp  ImmaturePoint.cpp
include/MVS/: colorizer.py  result.py  stereo_backend.py  unimvsnet_backend.py  window.py
include/OptimizationBackend/: EnergyFunctional.cpp
include/util/: settings.cpp  settings.h
launch/: dense.launch  dense_mono.launch  dense_mvsnet.launch  dense_stereo.launch  mono.launch  mono_graph.launch  mono_imu.launch  stereo.launch  stereo_graph.launch  stereo_imu.launch  vi_dso.launch
msg/: DepthMsg.msg  SlidingWindowsMsg.msg
rviz/: dense.rviz  graph.rviz  modes.rviz
scripts/: capture_dense.py  capture_rich.py  capture_showcase.py  dense_depth_node.py  dense_env.sh  dump_paths.py  dump_stereo.py  eval_all_visual.py  eval_ate.py  make_bench_fig.py  make_combo_gif.py  make_compare_fig.py  make_dense_gif.py  make_gifs.py  make_showcase_gif.py  render_rich.py  run_stereo_graph.sh
src/: dense_mapping_node.cpp  dso_imu_graph_node.cpp  vi_dso_node.cpp
