<?xml version="1.0"?>
<package format="2">
  <name>polytunnel_vio</name>
  <version>1.0.0</version>
  <description>
    Direct sparse visual(-inertial) odometry for agricultural robots (ROS1).
    A single package containing a patched Stereo/VI-DSO engine, a live ROS node
    with four modes (mono, mono_imu, stereo, stereo_imu), and a GTSAM factor-graph
    fusion node that adds metric scale to monocular DSO.
  </description>
  <maintainer email="jjhshoppingregis@gmail.com">shu</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospkg</exec_depend>
</package>
